# wireguard4netns

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  tasks.py  tasks.toml  tbump.toml  wireguard-go.patch
.reuse/: dep5
src/wireguard4netns/: __init__.py  __main__.py  cli.py  tundev.py  wireguard_daemon.py
tests/: test_version.py
