# SPDX-FileCopyrightText: 2022 Carnegie Mellon University
# SPDX-License-Identifier: 0BSD

[tool.poetry]
name = "wireguard4netns"
version = "0.1.3"
description = "WireGuard VPN networking for unprivileged network namespaces"
authors = [
    "Carnegie Mellon University <satya+group@cs.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmusatyalab/wireguard4netns"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
packages = [
    {include = "wireguard4netns", from = "src"},
]
include = [
    {path = "src/wireguard4netns/wireguard-go", format = "wheel"},
    {path = "LICENSES", format = "sdist"},
    {path = "poetry.lock", format = "sdist"},
    {path = "wireguard-go", format = "sdist"},
    {path = "wireguard-go.patch", format = "sdist"},
    {path = "tasks.py", format = "sdist"},
    {path = "tests", format = "sdist"},
]
exclude = [
    "wireguard-go/.git",
]

[tool.poetry.scripts]
wireguard4netns = "wireguard4netns.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=22.1.0"
importlib-resources = "^5.0"
pyroute2 = "^0.7.3"
typing-extensions = {version = "^4.4.0", python = "<3.8"}
wireguard-tools = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
poethepoet = "^0.16.5"
pre-commit = "^2.16.0"
tbump = "^6.9.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.991"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
# Explicit is better than implicit
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest decorators are not typed
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "pyroute2.*"
ignore_missing_imports = true

[tool.poe]
include = "tasks.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
